# metal

./: .gitignore  AGENTS.md  ast.h  codegen.cpp  codegen.h  lexer.cpp  lexer.h  meson.build  metal.cpp  parser.cpp  parser.h  tokens.h
.cache/clangd/index/: metal.cpp.F78910C3A007E135.idx
